--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DEPARTAMENTO DE INFORMATICA DEL CDP JOSE CABRERA</title>
+    <title>Registro de viviendas</title>
     <meta name="description" content="Departamento de informatica del CDP Jose Cabrera">
     <meta name="keywords" content="Grado superior, Desarrollo de aplicaciones web, Instituto, Informatica">
     <meta name="author" content="Angel Varela Pruaño">
@@ -74,16 +74,16 @@
     		<span class="icon-bar"></span>
     		<span class="icon-bar"></span>
     		</button>
-    		<a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.jp" alt="CDP. Jose Cabrera" style="color:black"></a>
+    		<a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.jp" alt="viviendas.com" style="color:black"></a>
     	</div>
     	<!-- Collect the nav links, forms, and other content for toggling -->
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     		<ul class="nav navbar-nav navbar-right">
           <!--- Menu -->
               <li><a href="index.html" class="page-scroll">Home</a></li>
-              <li><a href="daw.html" class="page-scroll">DAW</a></li>
-              <li><a href="portfolio.html" class="page-scroll">Portfolio</a></li>
-              <li><a href="profesores.html" class="page-scroll">Profesores</a></li>
+
+              <li><a href="viviendas.php" class="page-scroll">Viviendas</a></li>
+              <li><a href="registro.html" class="page-scroll">Registro</a></li>
               <li><a href="contacto.html" class="page-scroll">Contacto</a></li>
           </ul><!--- End Menu -->
     	</div>
@@ -125,11 +125,11 @@
                   <address>
                       <strong>Direccion</strong><br>
                       <br>
-                      CDP Jose Cabrera<br>
-                      Av. de Chipiona s/n, Trebujena, CP. 11560<br>
+                      viviendas.com<br>
+                      Plaza de Andalucia nº 25, Trebujena, CP. 11560<br>
                       Cadiz, España<br>
-                      Phone: (+34) 956 39 52 63<br>
-                      Email: 11008227.edu@juntadeandalucia.es
+                      Phone: (+34) 956 22 11 00<br>
+                      Email: info@viviendas.es
 
                         <ul class="social">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -161,7 +161,7 @@
 
                   <div class="col-md-12">
 <br><br>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2684.1239016252066!2d-6.178252356528015!3d36.86691570247935!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3eb7adb486ce0f1e!2sCentro+Docente+Jos%C3%A9+Cabrera!5e0!3m2!1ses!2ses!4v1515756739880" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.8090165782605!2d-6.1788686849298555!3d36.87098997993405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0de9370868fa5f%3A0x1f9b767687ff6914!2sPlaza+de+Andaluc%C3%ADa%2C+25%2C+11560+Trebujena%2C+C%C3%A1diz!5e0!3m2!1ses!2ses!4v1519900480728" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
             </div>
@@ -171,15 +171,15 @@
     <nav id="footer">
         <div class="container">
           <hr>
-<a class="navbar-brand page-scroll" href="index.html"><img src="img/logo.jpg" alt="CDP. Jose Cabrera" style="color:black"></a>
 
-          <ul class="social" style="float:right">
+
+          <ul class="social">
               <li><a href="#"><span class="fa fa-facebook"></span></a></li>
               <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
               <li><a href="#"><span class="fa fa-twitter"></span></a></li>
               <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
             </ul>
-<br><br><br><br><br><br><br>
+<br>
              <div class="pull-left">
                 <p>2018 © CDP Jose Cabrera. All Rights Reserved. Coded & Designed by <a href="http://www.agvarelapru.esy.es">Angel Varela</a></p>
             </div>
