--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DEPARTAMENTO DE INFORMATICA DEL CDP JOSE CABRERA</title>
+    <title>REGISTRO DE VIVIENDAS</title>
     <meta name="description" content="Departamento de informatica del CDP Jose Cabrera">
     <meta name="keywords" content="Grado superior, Desarrollo de aplicaciones web, Instituto, Informatica">
     <meta name="author" content="Angel Varela Pruaño">
@@ -74,7 +74,7 @@
     		<span class="icon-bar"></span>
     		<span class="icon-bar"></span>
     		</button>
-    		<a class="navbar-brand page-scroll" href="index.html"><img src="img/logo.jp" alt="CDP. Jose Cabrera" style="color:black"></a>
+    		<a class="navbar-brand page-scroll" href="index.html"><img src="img/logo.jp" alt="viviendas.com" style="color:black"></a>
     	</div>
     	<!-- Collect the nav links, forms, and other content for toggling -->
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -82,7 +82,7 @@
           <!--- Menu -->
               <li><a href="index.html" class="page-scroll">Home</a></li>
 
-              <li><a href="daw.html" class="page-scroll">DAW</a></li>
+
               <li><a href="viviendas.php" class="page-scroll">Viviendas</a></li>
               <li><a href="registro.html" class="page-scroll">Registro</a></li>
               <li><a href="contacto.html" class="page-scroll">Contacto</a></li>
@@ -120,7 +120,7 @@
             </nav>-->
 
             <div class="content">
-                <h4>CDP Jose Cabrera</h4>
+                <h4>viviendas.com</h4>
                 <hr>
                 <div class="header-text btn">
                     <h1><span id="head-title"></span></h1>
@@ -155,34 +155,22 @@
                   <div class="header-backup" ></div>
                       <!-- Wrapper for slides -->
                       <div class="carousel-inner" role="listbox" >
-                          <div class="item active" >
-                            <img src="img/roa.jpg" alt="" >
-                              <div class="carousel-caption" style="margin-bottom:20%;">
 
-
-                              </div>
-                          </div>
-                          <div class="item">
-                            <img src="img/code.jpg" alt="" width="100%">
+                          <div class="item active">
+                            <img src="imagenes/FotoFachada.jpg" alt="" width="100%">
                               <div class="carousel-caption">
 
 
                               </div>
                           </div>
                           <div class="item">
-                            <img src="img/code2.jpg" alt="" width="100%">
+                            <img src="imagenes/FotoFachada2.jpg" alt="" width="100%">
                               <div class="carousel-caption">
 
 
                               </div>
                           </div>
-                          <div class="item">
-                            <img src="img/cica.jpg" alt="" width="100%">
-                              <div class="carousel-caption">
 
-
-                              </div>
-                          </div>
                       </div>
                       <!-- Controls -->
                       <a class="left carousel-control" href="#carouselHacked" role="button" data-slide="prev">
@@ -200,10 +188,14 @@
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="section-title">
-                        <h2>Desarrollo de aplicaciones web</h2>
+                        <h2>Registro de viviendas</h2>
                         <hr>
                     </div>
-                    <p> La competencia general de este título consiste en desarrollar, implantar, y mantener aplicaciones web, con independencia del modelo empleado y utilizando tecnologías específicas, garantizando el acceso a los datos de forma segura y cumpliendo los criterios de accesibilidad, usabilidad y calidad exigidas en los estándares establecidos.</p>
+                    <p>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat ut turpis non ultricies. Aenean viverra sem in magna vehicula, a sagittis dolor posuere. Nulla facilisi. Pellentesque ullamcorper neque non orci eleifend interdum. Pellentesque dolor nibh, lacinia sed congue eu, rhoncus sed ex. Sed tempor dapibus ex, quis imperdiet elit hendrerit a. In purus lacus, imperdiet ut ornare et, tristique at ipsum. In feugiat odio quis diam venenatis tempus. Cras nec urna at leo aliquet porta id sit amet nunc. Maecenas sit amet finibus lacus. Fusce rutrum lectus quis laoreet faucibus. Integer et tortor cursus, imperdiet sapien sit amet, ornare ipsum. Aenean commodo mattis blandit. Nulla non sapien sed nunc faucibus euismod.
+</p><p>
+Pellentesque vitae dolor in magna condimentum blandit. Aliquam finibus semper enim at rhoncus. Vivamus fermentum feugiat tellus ac maximus. Maecenas at metus ut nulla rhoncus accumsan et a tellus. Duis luctus augue at eros congue ultricies. Phasellus augue magna, aliquam porta tincidunt ut, blandit eget lacus. Morbi dictum et magna in posuere. Sed congue erat urna, sed tempor ipsum volutpat a. Aenean vitae maximus nunc. Etiam auctor massa quis est sagittis pharetra. Integer accumsan eget justo id blandit. Aenean rhoncus, dolor in convallis accumsan, dolor dolor porta neque, quis mollis elit enim maximus est. Curabitur vulputate justo a lectus sagittis, a elementum diam aliquam. </p>
 
 
 
@@ -235,8 +227,8 @@
                         <h2>Entorno profesional</h2>
                         <hr>
                     </div>
-                    <p>Las personas con este perfil profesional ejercen su actividad en empresas o entidades públicas o privadas tanto por cuenta ajena como propia, desempeñando su trabajo en el área de desarrollo de aplicaciones informáticas relacionadas con entornos Web (intranet, extranet e internet). </p><br>
-<p>Las ocupaciones y puestos de trabajo más relevantes son:</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat ut turpis non ultricies. Aenean viverra sem in magna vehicula, a sagittis dolor posuere. Nulla facilisi. Pellentesque ullamcorper neque non orci eleifend interdum. Pellentesque dolor nibh, lacinia sed congue eu, rhoncus sed ex. Sed tempor dapibus ex, quis imperdiet elit hendrerit a. In purus lacus, imperdiet ut ornare et, tristique at ipsum. In feugiat odio quis diam venenatis tempus. Cras nec urna at leo aliquet porta id sit amet nunc. Maecenas sit amet finibus lacus. Fusce rutrum lectus quis laoreet faucibus. Integer et tortor cursus, imperdiet sapien sit amet, ornare ipsum. Aenean commodo mattis blandit. Nulla non sapien sed nunc faucibus euismod. </p><br>
+<p>Los beneficios del registro son:</p>
                 </div>
             </div>
 
@@ -246,7 +238,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
                         <span class="fa fa-book fa-3x"></span>
-                        <h4>Programador Web.</h4>
+                        <h4>Informacion publica.</h4>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis. </p>
                     </div>
                 </div>
@@ -254,7 +246,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
                         <span class="fa fa-bicycle fa-3x"></span>
-                        <h4>Programador Multimedia.</h4>
+                        <h4>Promacion de la vivienda.</h4>
                         <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Accusamus et. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
                     </div>
                 </div>
@@ -262,7 +254,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="service">
                         <span class="fa fa-plug fa-3x"></span>
-                        <h4>Desarrollador de aplicaciones en entornos Web.</h4>
+                        <h4>Control de la vivienda.</h4>
                         <p>Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
                     </div>
                 </div>
@@ -281,73 +273,11 @@
     </div>
 
     <!-- Portfolio Section -->
-    <div id="works">
-        <div class="container">
-            <div class="row text-center" >
-                <div class="col-md-14 col-md-offset-0">
-                    <div class="section-title">
-                        <h2>COMPETENCIAS</h2>
-                        <hr>
-                    </div>
-                    <ul>
-
-
-
-  <li>  Configurar y explotar sistemas informáticos, adaptando la configuración lógica del sistema según las necesidades de uso y los criterios establecidos.</li>
-    <li>Aplicar técnicas y procedimientos relacionados con la seguridad en sistemas, servicios y aplicaciones, cumpliendo el plan de seguridad.</li>
-  <li>  Gestionar servidores de aplicaciones adaptando su configuración en cada caso para permitir el despliegue de aplicaciones web.</li>
-  <li>  Gestionar bases de datos, interpretando su diseño lógico y verificando integridad, consistencia, seguridad y accesibilidad de los datos.</li>
-  <li>  Desarrollar aplicaciones web con acceso a bases de datos utilizando lenguajes, objetos de acceso y herramientas de mapeo adecuados a las especificaciones.</li>
-  <li>  Integrar contenidos en la lógica de una aplicación web, desarrollando componentes de acceso a datos adecuados a las especificaciones.</li>
-  <li>  Desarrollar interfaces en aplicaciones web de acuerdo con un manual de estilo, utilizando lenguajes de marcas y estándares web.</li>
-  <li>  Desarrollar componentes multimedia para su integración en aplicaciones web, empleando herramientas específicas y siguiendo las especificaciones establecidas.</li>
-  <li>  Integrar componentes multimedia en el interface de una aplicación web, realizando el análisis de interactividad, accesibilidad y usabilidad de la aplicación.</li>
-  <li>  Desarrollar e integrar componentes software en el entorno del servidor web, empleando herramientas y lenguajes específicos, para cumplir las especificaciones de la aplicación.</li>
-  <li>  Desarrollar servicios para integrar sus funciones en otras aplicaciones web, asegurando su funcionalidad.</li>
-  <li>  Integrar servicios y contenidos distribuidos en aplicaciones web, asegurando su funcionalidad .</li> </ul>
-                </div>
-            </div>
-            <div class="space"></div>
-        </div>
-
-        <div class="space"></div>
-        <div class="text-center">
-            <a href="#" class="btn read-more-btn">Check on Dribbble</a>
-            <br>
-            <a href="#about-us" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
-        </div>
-    </div>
-
-    <!-- Clients Section -->
-    <div id="clients" >
-        <div class="overlay">
-            <div class="container text-center" style="width:100%;">
-                <div class="section-title">
-                    <h2>Empresas colaboradoras</h2>
-                    <hr>
-                </div>
-
-                <ul class="clients" >
-                    <li style="width:15%;"><a href="#"><img src="img/everis.png" class="img-responsive" alt="..."></a></li>
-                    <li style="width:15%;"><a href="#"><img src="img/xerintel.png" class="img-responsive" alt="..."></a></li>
-                    <li style="width:15%;"><a href="#"><img src="img/sadiel.jpg" class="img-responsive" alt="..."></a></li>
-                    <li style="width:15%;"> <a href="#"><img src="img/guadaltel.png" class="img-responsive" alt="..."></a></li>
-                      <li style="width:15%;"> <a href="#"><img src="img/ayesa.png" class="img-responsive" alt="..."></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
 
     <!-- About Us Section -->
 
 
-    <div class="space"></div>
-    <div class="text-center">
-        <a href="#" class="btn read-more-btn">Check on Dribbble</a>
-        <br>
-        <a href="#about-us" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
-    </div>
-  <div class="space"></div>
+
 
 
         <!-- Testimonial Section -->
@@ -401,7 +331,7 @@
     <script>
       $(function(){
           $("#head-title").typed({
-            strings: ["Departamento de informatica^1000", "Desarrollo de aplicaciones web^1000" ,"Marcamos la diferencia^1000"],
+            strings: ["Registro de viviendas^1000", "Encuentre una vivienda web^1000" ,"Informacion de viviendas^1000"],
             typeSpeed: 100,
             loop: true,
             startDelay: 100
