--- a/index.html
+++ b/index.html
@@ -58,11 +58,54 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111179481-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111179481-3');
+    </script>
 
 
 
   </head>
   <body>
+
+    <div itemscope itemtype="http://schema.org/LocalBusiness" hidden>
+    <a itemprop="url" href="http://www.agvarelapru.esy.es/PaginaGestionViviendas/"><div itemprop="name"><strong>viviendas.com</strong></div>
+    </a>
+    <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+    <span itemprop="ratingValue">5</span> Estrellas - Basadas en <span itemprop="reviewCount">250</span> opiniones
+    </div>
+    <div itemprop="image">
+    <a href="https://www.arquitecto-tecnico-trebujena.es" target="_blank">
+        <img src="http://www.agvarelapru.esy.es/PaginaGestionViviendas/imagenes/CARTEL.jpg" width="62%"  alt="imagen logo" itemprop="image"/></a>
+      </div>
+    <div itemprop="description">registro de viviendas</div>
+    <meta itemprop="MakesOffer" content="Registro de viviendas">
+    <meta itemprop="MakesOffer" content="Informacion de viviendas">
+    <meta itemprop="MakesOffer" content="Promocion de viviendas">
+    <div itemprop="telephone">605123456</div>
+    <div itemprop="geo" itemscope itemtype="http://schema.org/GeoCoordinates"><meta itemprop="latitude" content="36.870984"><meta itemprop="longitude" content="-6.176559"></div>
+    <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+    <span itemprop="streetAddress">Plaza Andalucia, 25</span>
+    <span itemprop="addressLocality">Trebujena</span>,
+    <span itemprop="addressRegion">CADIZ</span>
+    <span itemprop="postalCode">11560</span>
+    <span itemprop="addressCountry">España</span><br>
+    </div>
+    <A href="https://maps.google.com/maps?q=Plaza Andalucia, 25+Trebujena+CADIZ&gl=us&t=h&z=16" itemprop="map" target="map">map</a><meta itemprop="address" content="Plaza Andalucia, 25 Trebujena, CADIZ 11560 España">
+     &nbsp; <a rel="author" href="https://plus.google.com/u/0/+AngelVarelaPrua%C3%B1o">G+</a></div>
+
+
+
+
+
+
+
+
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
@@ -157,14 +200,14 @@
                       <div class="carousel-inner" role="listbox" >
 
                           <div class="item active">
-                            <img src="imagenes/FotoFachada.jpg" alt="" width="100%">
+                            <img src="imagenes/FotoFachada.jpg" alt="Fachada 1" width="100%">
                               <div class="carousel-caption">
 
 
                               </div>
                           </div>
                           <div class="item">
-                            <img src="imagenes/FotoFachada2.jpg" alt="" width="100%">
+                            <img src="imagenes/FotoFachada2.jpg" alt="Fachada 2" width="100%">
                               <div class="carousel-caption">
 
 
@@ -289,7 +332,12 @@ Pellentesque vitae dolor in magna condimentum blandit. Aliquam finibus semper en
     <nav id="footer">
         <div class="container">
 
-
+          <p style="float:right">
+            <br>
+             <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AAA">
+               <img src="https://achecker.ca/images/icon_W2_aaa.jpg" alt="WCAG 2.0 (Level AAA)" height="32" width="102" />
+             </a>
+           </p>
           <ul class="social" style="float:left">
               <li><a href="#"><span class="fa fa-facebook"></span></a></li>
               <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
